--- a/index.html
+++ b/index.html
@@ -7,7 +7,35 @@
     <title>Form Validator</title>
 </head>
 <body>
+<div class="container">
+    <form id="form" class="form">
+        <h2>Register With Us</h2>
+        <div class="form-control">
+            <label for="username">Username</label>
+            <input type="text" id="username" placeholder="Enter username"/>
+            <small>Error messsage</small>
+        </div>
 
+        <div class="form-control">
+            <label for="email">Email</label>
+            <input type="text" id="email" placeholder="Enter Email"/>
+            <small>Error messsage</small>
+        </div>
+
+        <div class="form-control">
+            <label for="password">Password</label>
+            <input type="password" id="password" placeholder="Enter password"/>
+            <small>Error messsage</small>
+        </div>
+
+        <div class="form-control">
+            <label for="password2">Confirm Password</label>
+            <input type="password" id="password2" placeholder="Confirm Passowrd"/>
+            <small>Error messsage</small>
+        </div>
+        <button typr="submit">Submit</button>
+    </form>
+</div>
 
     <script scr="script.js"></script>
 </body>
