--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             <input type="password" id="password2" placeholder="Confirm Passowrd"/>
             <small>Error messsage</small>
         </div>
-        <button typr="submit">Submit</button>
+        <button type="submit">Submit</button>
     </form>
 </div>
 
-    <script scr="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
